--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "mocha": "9.1.3",
     "nyc": "15.1.0",
     "sinon": "12.0.1"
+  },
+  "dependencies": {
+    "uuid": "8.3.2",
+    "ws": "8.4.0"
   }
 }
